# trust-grid-sol

./: .env.example  .gitignore  .prettierignore  AGENTS.md  Anchor.toml  README.md  package-lock.json  package.json
app/: .gitignore  next.config.js  package-lock.json  package.json  patch-ledger.js  tailwind.config.js  tsconfig.json
app/components/: AgentNetworkGraph.tsx  Layout.tsx  Skeleton.tsx  Toast.tsx  WalletButton.tsx  WalletProviders.tsx
app/lib/: agent-mode.ts  agent-wallet.ts  agents.ts  constants.ts  metaplex.ts  transactions.ts
app/pages/: _app.tsx  _document.tsx  agent.tsx  dashboard.tsx  index.tsx  mcp.tsx  network.tsx  task.tsx  tasks.tsx
app/styles/: globals.css
app/types/: solana-wallet.d.ts
cli/: trustgrid.ts
migrations/: demo-flow.ts  deploy.ts  seed-all.ts  seed-feedback.ts  seed.ts
programs/trustgrid-solana/: Cargo.toml
programs/trustgrid-solana/src/: lib.rs
tests/: trustgrid-solana.ts
x402/: server.ts  solana.ts
