[package]
name = "trustgrid-solana"
version = "0.1.0"
description = "TrustGrid - AI Agent Marketplace on Solana with x402 payments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trustgrid_solana"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata", "token"] }
